--- a/index.html
+++ b/index.html
@@ -15,36 +15,37 @@
   <div class = "inner-layer">
       <div class = "image-container">
         <img src="images/illustration-woman-online-desktop.svg" alt="">
+        <img class = "orange-box" src="images/illustration-box-desktop.svg" alt="">
       </div>
       <div class = "faq-container">
         <div>
           <h1 class = "FAQ-header">FAQ</h1>
         </div>
         <div class = "faq-layer">
-          <button class= "question0 accordion" id= "q">How many team members can I invite? </button>
-          <p class = "response0 visible" id= "r">You can invite up to 2 additional users on the Free plan. There is no limit on 
+          <button class= "accordion">How many team members can I invite? &#9947</button>
+          <p class = "visible">You can invite up to 2 additional users on the Free plan. There is no limit on 
           team members for the Premium plan.</p>
           <hr>
         </div>
         <div class = "faq-layer">
-          <button class= "question1 accordion" id= "q">What is the maximum file upload size?</button>
-          <p class = "response1 visible" id= "r">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+          <button class= "accordion">What is the maximum file upload size? &#9947</button>
+          <p class = "visible">No more than 2GB. All files in your account must fit your allotted storage space.</p>
           <hr>
         </div>
         <div class = "faq-layer">
-          <button class= "question2 accordion" id= "q">How do I reset my password?</button>
-          <p class = "response2 visible" id= "r">Click “Forgot password” from the login page or “Change password” from your profile page.
+          <button class= "accordion">How do I reset my password? &#9947</button>
+          <p class = "visible">Click “Forgot password” from the login page or “Change password” from your profile page.
           A reset link will be emailed to you.</p>
           <hr>
         </div>
         <div class = "faq-layer">
-          <button class= "question3 accordion" id= "q">Can I cancel my subscription?</button>
-          <p class = "response3 visible" id= "r">Yes! Send us a message and we’ll process your request no questions asked.</p>
+          <button class= "accordion">Can I cancel my subscription? &#9947</button>
+          <p class = "visible">Yes! Send us a message and we’ll process your request no questions asked.</p>
           <hr>
         </div>
         <div class = "faq-layer">
-          <button class= "question4 accordion" id= "q">Do you provide additional support?</button>
-          <p class = "response4 visible" id= "r">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+          <button class= "accordion">Do you provide additional support? &#9947</button>
+          <p class = "visible">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
           <hr>
         </div>
     </div>
@@ -53,6 +54,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Gabriel</a>.
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="app.js"></script>
 </body>
 
