edit arrow color

--- a/index.html
+++ b/index.html
@@ -22,29 +22,29 @@
           <h1 class = "FAQ-header">FAQ</h1>
         </div>
         <div class = "faq-layer">
-          <button class= "accordion">How many team members can I invite? &#9947</button>
+          <button class= "accordion">How many team members can I invite? <span style = "color: orange" > &#9947</span> </button>
           <p class = "visible">You can invite up to 2 additional users on the Free plan. There is no limit on 
           team members for the Premium plan.</p>
           <hr>
         </div>
         <div class = "faq-layer">
-          <button class= "accordion">What is the maximum file upload size? &#9947</button>
+          <button class= "accordion">What is the maximum file upload size? <span style = "color: orange" > &#9947</span> </button>
           <p class = "visible">No more than 2GB. All files in your account must fit your allotted storage space.</p>
           <hr>
         </div>
         <div class = "faq-layer">
-          <button class= "accordion">How do I reset my password? &#9947</button>
+          <button class= "accordion">How do I reset my password? <span style = "color: orange" > &#9947</span> </button>
           <p class = "visible">Click “Forgot password” from the login page or “Change password” from your profile page.
           A reset link will be emailed to you.</p>
           <hr>
         </div>
         <div class = "faq-layer">
-          <button class= "accordion">Can I cancel my subscription? &#9947</button>
+          <button class= "accordion">Can I cancel my subscription? <span style = "color: orange" > &#9947</span> </button>
           <p class = "visible">Yes! Send us a message and we’ll process your request no questions asked.</p>
           <hr>
         </div>
         <div class = "faq-layer">
-          <button class= "accordion">Do you provide additional support? &#9947</button>
+          <button class= "accordion">Do you provide additional support? <span style = "color: orange" > &#9947</span> </button>
           <p class = "visible">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
           <hr>
         </div>
